--- a/deploy-deepseek-huggingface.ipynb
+++ b/deploy-deepseek-huggingface.ipynb
@@ -143,6 +143,29 @@
     "    }\n",
     "})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bbb989a-1b1a-43fc-9740-6a99cb5c52e1",
+   "metadata": {},
+   "source": [
+    "## Cleanup\n",
+    "Make sure to clean up once done with running this demo in your environment in order to avoid incurring further chargers.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "489c123d-967f-4a2f-af22-397211dc4e50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete the model\n",
+    "predictor.delete_model()\n",
+    "\n",
+    "# Delete the endpoint\n",
+    "predictor.delete_endpoint()"
+   ]
   }
  ],
  "metadata": {
